# SecretSquirrel

./: .gitignore  Cargo.toml  Dockerfile  README.md  a  config-prod.json  config.json  generated-requests.http  go.mod  go.sum  http-client.env.json  linux_install_script.sh  main.go  terraform_test.tf
.github/workflows/: deploy.yml  go.yml
cmd/: cmd.go
cmd/main/: main.go
cmd/secureserver/: cmd.go
internal/api/: keyvalue.go
internal/appconfig/: serverconfig.go
internal/auth/: auth.go  main.go
internal/common/: common.go  config.go  main.go
internal/encryption/: encryption.go  main.go  main_test.go
internal/fileserver/: fileserver.go  main.go
internal/ginhosting/: handlerfileserver.go  handlerkeyvalue.go  handlerpki.go  handlertfstate.go  middlewareauth.go  middlewarejsonlog.go  middlewarenamespace.go  runner.go
internal/iss/: entrypoint.go  fileserver.go  io.go  tfstate.go
internal/keyvalue/: keyvalue.go
internal/middleware/: auth.go  jsonlog.go  middlewarenamespace.go
internal/ops/: fileserver.go  tfstate.go
internal/physical/: file.go  main.go  persistence.go  physical.go  storage.go
internal/pki/: main.go  main_test.go  pki.go
internal/routehandlers/: fileserver.go  pki.go  tfstate.go
internal/serverconfig/: main.go  main_test.go  serverconfig.go
internal/storage/: gpg.go  gpg_test.go  io.go  main.go  storage.go
internal/tfstate/: main.go  tfstate.go
secretsquirrel/: cmd.go
server/: README.md
src/: lib.rs  main.rs  physical.rs
tests/: aes.rs  generated-requests.http  http-client.env.json  terraform_test.tf
(+6 files in other folders)
