[package]
name = "secretsquirrel"
version = "0.1.0"
edition = "2021"

[dependencies]
libsql = "0.6.0"
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["full"] }
axum = "0.7.9"
hyper = { version = "1.5.1", features = ["full"] }
tower = "0.5.1"
aes = "0.8.4"
hex = "0.4.3"
rand = "0.8.5"
cbc = "0.1.2"
hex-literal = "0.4.1"
base64 = "0.22.1"
